Stripped from all environment settings and replaced PostgreSQL by default sqlite db

--- a/templates/_base.html
+++ b/templates/_base.html
@@ -14,7 +14,7 @@
         <a href="/">
             <img class="logo" src="{% static "images/aesset.png" %}" height="50" >
         </a>
-        <div id="app-title">aesset Resource Manager</div>
+        <div id="app-title">Aesset Stripped Django Site</div>
     </h1>
     <div id="version_number" >
         version: {{ APP_VERSION_NUMBER }}<br>
