Add and commit CHANGELOG.html to git

--- a/templates/changelog.html
+++ b/templates/changelog.html
@@ -1,4 +1,10 @@
-{% extends '_base.html' %}{% load static %}{% block title %}NPO-RM Changelog {% endblock title %}{% block content %}<div class='container-fluid pl-3'><br><h1>Changelog for xyz</h1>
+{% extends '_base.html' %}
+{% load static %}
+{% block title %}NPO-RM Changelog {% endblock title %}
+{% block content %}
+<div class='container-fluid pl-3'>
+<br>
+<h1>Changelog for xyz</h1>
 <h2>1.1.1 (2021-01-24)</h2>
 <ul>
 <li>testing prerelase entry point</li>
@@ -43,4 +49,6 @@
 <h2>0.0.1(2020-12-24)</h2>
 <ul>
 <li>First install</li>
-</ul></div>{% endblock content %}
+</ul>
+</div>
+{% endblock content %}
