new CHANGELOG.html

--- a/templates/CHANGELOG.html
+++ b/templates/CHANGELOG.html
@@ -7,7 +7,12 @@
 <h1>Changelog for xyz</h1>
 <h2>1.1.1 (2021-01-24)</h2>
 <ul>
-<li>testing prerelase entry point</li>
+<li>
+<p>Testing git commits log</p>
+</li>
+<li>
+<p>testing prerelase entry point</p>
+</li>
 </ul>
 <h2>1.1.0 (2021-01-24)</h2>
 <ul>
