new CHANGELOG.html

--- a/templates/CHANGELOG.html
+++ b/templates/CHANGELOG.html
@@ -5,6 +5,10 @@
 <div class='container-fluid pl-3'>
 <br>
 <h1>Changelog for xyz</h1>
+<h2>1.1.2 (2021-01-24)</h2>
+<ul>
+<li>Testing git commits log II</li>
+</ul>
 <h2>1.1.1 (2021-01-24)</h2>
 <ul>
 <li>
